examples/test/testpolicy17484.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy17484
  namespace: namespace408
spec:
  podSelector:
    matchLabels:
      key18: value26
      key28: value37
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key6: value12
          key35: value12
          key5: value43
      podSelector:
        matchLabels:
          key27: value9
